--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/backend": "0.36.0",
-    "@clerk/nextjs": "^5.0.1-canary.vf52035c",
-    "@clerk/types": "3.60.0",
+    "@clerk/nextjs": "beta",
+    "@clerk/types": "beta",
     "clsx": "^2.0.0",
-    "next": "^14.0.3",
+    "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0"
